--- a/src/assets/style.sass
+++ b/src/assets/style.sass
@@ -11,8 +11,8 @@ a
 .btn-blue-light
   @apply bg-blue-light text-white
 
-.btn-blue-light
-  @apply bg-blue-light text-white
+.btn-blue-dark
+  @apply bg-blue-dark text-white
 
 .nav-menu
   @apply list-reset
